# diskarzhan

./: MANIFEST.in  README  pyproject.toml
diskarzhan/: diskarzhan.py  diskarzhan.yaml  std.py
scripts/: sync-with-iwyu
