[project]
name = "diskarzhan"
authors = [{name="Serge Guelton", email="sguelton@mozilla.com"}]
license = {file = "LICENSE"}
version = "0.1.1"
description = "Simple C and C++ standard header curator"
requires-python = ">=3.8"
classifiers=[
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Compilers',
]

[project.urls]
Homepage = "https://github.com/mozilla/diskarzhan"

[project.scripts]
diskarzhan = "diskarzhan.diskarzhan:run"
